--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,1 @@
-fastapi==0.115.13
-uvicorn==0.34.3
-sentence-transformers==2.2.2
-pandas==1.5.3
-numpy==1.24.3
-torch==2.0.1
-scikit-learn==1.3.0
-scipy==1.15.3
-transformers==4.52.4
-huggingface-hub==0.33.0 
+# No dependencies needed for test endpoint 
