--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.10.0",
+    "csv-parser": "^3.2.0",
     "flowbite-react": "^0.11.8",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
