--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
-    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
-    "@tensorflow/tfjs": "^4.22.0",
-    "@tensorflow/tfjs-node": "^4.22.0",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.10.0",
     "csv-parser": "^3.2.0",
     "flowbite-react": "^0.11.8",
