--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flowbite-react": "^0.11.8",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
+    "papaparse": "^5.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
