--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "framework": "vite",
   "functions": {
     "api/bert-match.js": {
-      "includeFiles": ["filtered_trials.csv", "trial_embeddings.json"],
+      "includeFiles": "filtered_trials.csv,trial_embeddings.json",
       "maxDuration": 15
     }
   }
