--- a/requirements-simple.txt
+++ b/requirements-simple.txt
@@ -1,1 +1,12 @@
-pandas==1.5.3 
+fastapi==0.110.0
+uvicorn==0.29.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+torch
+sentence-transformers
+requests
+beautifulsoup4
+pydantic
+streamlit
+transformers 
