--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: web
     name: nxtcure-app
     env: python
-    buildCommand: cd nxtcure-frontend && npm install && npm run build && pip install -r requirements-simple.txt
+    # Python version is set via runtime.txt (python-3.10.13)
+    buildCommand: npm install && npm run build && pip install -r requirements-simple.txt
     startCommand: python backend/main.py
     plan: free
     envVars:
