--- a/requirements-simple.txt
+++ b/requirements-simple.txt
@@ -1,6 +1,6 @@
 fastapi==0.110.0
 uvicorn==0.29.0
-pandas==1.5.3
+pandas==2.2.2
 numpy==1.26.4
 scikit-learn==1.4.2
 torch
@@ -8,4 +8,5 @@ sentence-transformers
 requests
 beautifulsoup4
 pydantic
+streamlit
 transformers 
