--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "postinstall": "flowbite-react patch",
-    "serve": "npx serve -s dist"
+    "serve": "npx serve -s dist",
+    "start": "node ./api/server.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
@@ -23,7 +24,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.2"
+    "react-router-dom": "^7.5.2",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
