--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@tailwindcss/vite": "^4.1.4",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.10.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
+    "express": "^4.18.2",
     "flowbite-react": "^0.11.8",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
@@ -24,9 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.2",
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2"
+    "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
